# ruuvi-data-forwarder-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  perf_matrix.sh  perf_test.sh
.github/workflows/: ci.yml  claude.yml
config/: default.toml
src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  maintenance.rs  pipeline.rs  source.rs
src/sink/: console.rs  duckdb.rs  ducklake.rs  mod.rs  worker.rs
tests/: config_test.rs  console_test.rs  duckdb_test.rs  ducklake_test.rs  maintenance_test.rs  pipeline_test.rs
tests/common/: mod.rs
