[package]
name = "ruuvi-data-forwarder-rs"
version = "0.1.0"
edition = "2021"
default-run = "ruuvi-data-forwarder-rs"

[lib]
name = "ruuvi_data_forwarder_rs"
path = "src/lib.rs"

[[bin]]
name = "ruuvi-data-forwarder-rs"
path = "src/main.rs"

[[bin]]
name = "ruuvi-ducklake-maintenance-rs"
path = "src/bin/ruuvi-ducklake-maintenance.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.5.4", features = ["bundled"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
regex = "1"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
duckdb = { version = "1.5.4", features = ["bundled"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
